git-svn-id: http://svn.vdombox.ru/flextools/trunk@5584 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Edition/locale/en_US/Main.properties
+++ b/IDE/v.02/modules/Edition/locale/en_US/Main.properties
@@ -12,21 +12,21 @@ properties_name = Name
 properties_name_prompt = Application Name
 properties_description = Description
 properties_description_prompt = Application Description
-properties_edit = Edit
+properties_edition = Edition
 
 # CreateApplication component
 create_title = Create application
 
-# EditApplication component
-edit_title = Edit application
+# EditionApplication component
+edition_title = Edition application
 
 # SearchResult component
 expand_label = Expand All
 collapse_label = Collapse All
-goto_label = Go to Editor
+goto_label = Go to Editionor
 name_label = Application Name:
 
-# ApplicationEditor component
+# ApplicationEditionor component
 icon_title = Illustration
 name_title = Name
 name_prompt = Application Name
