--- a/IDE/v.02/modules/Edition/locale/ru_RU/Main.properties
+++ b/IDE/v.02/modules/Edition/locale/ru_RU/Main.properties
@@ -15,13 +15,13 @@ properties_name = Имя
 properties_name_prompt = Имя приложения
 properties_description = Описание
 properties_description_prompt = Описание приложения
-properties_edit = Редактирование
+properties_edition = Редактирование
 
 # CreateApplication component
 create_title = Создать приложение
 
-# EditApplication component
-edit_title = Редактирование приложения
+# EditionApplication component
+edition_title = Редактирование приложения
 
 # SearchResult component
 expand_label = Раскрыть всё
@@ -29,7 +29,7 @@ collapse_label = Свернуть всё
 goto_label = К Редактору
 name_label = Имя приложения:
 
-# ApplicationEditor component
+# ApplicationEditionor component
 icon_title = Иконка
 name_title = Имя
 name_prompt = Имя приложения
