--- a/IDE/v.02/modules/Wysiwyg/locale/fr_FR/Main.properties
+++ b/IDE/v.02/modules/Wysiwyg/locale/fr_FR/Main.properties
@@ -12,21 +12,21 @@ properties_name = Name
 properties_name_prompt = Application Name
 properties_description = Description
 properties_description_prompt = Application Description
-properties_edition = Edition
+properties_wysiwyg = wysiwyg
 
 # CreateApplication component
 create_title = Create application
 
-# EditionApplication component
-edition_title = Edition application
+# wysiwygApplication component
+wysiwyg_title = wysiwyg application
 
 # SearchResult component
 expand_label = Expand All
 collapse_label = Collapse All
-goto_label = Go to Editionor
+goto_label = Go to wysiwygor
 name_label = Application Name:
 
-# ApplicationEditionor component
+# Applicationwysiwygor component
 icon_title = Illustration
 name_title = Name
 name_prompt = Application Name
