git-svn-id: http://svn.vdombox.ru/flextools/trunk@5777 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Tree/locale/ru_RU/Tree_General.properties
+++ b/IDE/v.02/modules/Tree/locale/ru_RU/Tree_General.properties
@@ -1,3 +1,7 @@
 #Title
-title = Tree
-toolset_button_label = Tree
+title = Дерево
+toolset_button_label = Дерево
+properties_panel_title = Свойства
+properties_panel_page_title = Заголовок
+properties_panel_page_description = Описание
+properties_panel_page_image = Картинка
