--- a/IDE/v.02/modules/Tree/locale/fr_FR/Tree_General.properties
+++ b/IDE/v.02/modules/Tree/locale/fr_FR/Tree_General.properties
@@ -1,3 +1,7 @@
 # Title
 title = Tree
 toolset_button_label = Tree
+properties_panel_title = Properties
+properties_panel_page_title = Title
+properties_panel_page_description = Description
+properties_panel_page_image = Image
