git-svn-id: http://svn.vdombox.ru/flextools/trunk@5780 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Tree/locale/ru_RU/Tree_General.properties
+++ b/IDE/v.02/modules/Tree/locale/ru_RU/Tree_General.properties
@@ -5,3 +5,7 @@ properties_panel_title = Свойства
 properties_panel_page_title = Заголовок
 properties_panel_page_description = Описание
 properties_panel_page_image = Картинка
+
+properties_panel_btn_save = Сохранить
+properties_panel_btn_start = Стартовая
+properties_panel_btn_delete = Удалить
