--- a/IDE/v.02/modules/Tree/locale/fr_FR/Tree_General.properties
+++ b/IDE/v.02/modules/Tree/locale/fr_FR/Tree_General.properties
@@ -5,3 +5,7 @@ properties_panel_title = Properties
 properties_panel_page_title = Title
 properties_panel_page_description = Description
 properties_panel_page_image = Image
+
+properties_panel_btn_save = Save
+properties_panel_btn_start = Start
+properties_panel_btn_delete = Delete
