--- a/IDE/v.02/modules/Tree/locale/ru_RU/Tree_General.properties
+++ b/IDE/v.02/modules/Tree/locale/ru_RU/Tree_General.properties
@@ -9,3 +9,12 @@ properties_panel_page_image = Картинка
 properties_panel_btn_save = Сохранить
 properties_panel_btn_start = Стартовая
 properties_panel_btn_delete = Удалить
+
+level_0 = Уровень 0
+level_1 = Уровень 1
+level_2 = Уровень 2
+level_3 = Уровень 3
+level_4 = Уровень 4
+level_5 = Уровень 5
+level_6 = Уровень 6
+level_7 = Уровень 7
