--- a/IDE/v.02/modules/Tree/locale/fr_FR/Tree_General.properties
+++ b/IDE/v.02/modules/Tree/locale/fr_FR/Tree_General.properties
@@ -9,3 +9,12 @@ properties_panel_page_image = Image
 properties_panel_btn_save = Save
 properties_panel_btn_start = Start
 properties_panel_btn_delete = Delete
+
+level_0 = Level 0
+level_1 = Level 1
+level_2 = Level 2
+level_3 = Level 3
+level_4 = Level 4
+level_5 = Level 5
+level_6 = Level 6
+level_7 = Level 7
