git-svn-id: http://svn.vdombox.ru/flextools/trunk@5796 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Tree/locale/en_US/Tree_General.properties
+++ b/IDE/v.02/modules/Tree/locale/en_US/Tree_General.properties
@@ -1,6 +1,11 @@
 # Title
 title = Tree
 toolset_button_label = Tree
+
+#Menu Panel
+menu_panel_title = Menu
+
+#Properties Panel
 properties_panel_title = Properties
 properties_panel_page_title = Title
 properties_panel_page_description = Description
@@ -9,6 +14,12 @@ properties_panel_page_image = Image
 properties_panel_btn_save = Save
 properties_panel_btn_start = Start
 properties_panel_btn_delete = Delete
+
+#Levels Panel
+levels_panel_title = Levels
+
+level_show_all = Show All
+level_hide_all = Hide All
 
 level_0 = Level 0
 level_1 = Level 1
