--- a/IDE/v.02/modules/Tree/locale/fr_FR/Tree_General.properties
+++ b/IDE/v.02/modules/Tree/locale/fr_FR/Tree_General.properties
@@ -1,6 +1,9 @@
 # Title
 title = Tree
 toolset_button_label = Tree
+
+menu_panel_title = Menu
+
 properties_panel_title = Properties
 properties_panel_page_title = Title
 properties_panel_page_description = Description
@@ -9,6 +12,11 @@ properties_panel_page_image = Image
 properties_panel_btn_save = Save
 properties_panel_btn_start = Start
 properties_panel_btn_delete = Delete
+
+levels_panel_title = Levels
+
+level_show_all = Show All
+level_hide_all = Hide All
 
 level_0 = Level 0
 level_1 = Level 1
