--- a/IDE/v.02/modules/Tree/locale/ru_RU/Tree_General.properties
+++ b/IDE/v.02/modules/Tree/locale/ru_RU/Tree_General.properties
@@ -1,6 +1,11 @@
 #Title
 title = Дерево
 toolset_button_label = Дерево
+
+#Menu Panel
+menu_panel_title = Меню
+
+#Properties Panel
 properties_panel_title = Свойства
 properties_panel_page_title = Заголовок
 properties_panel_page_description = Описание
@@ -9,6 +14,12 @@ properties_panel_page_image = Картинка
 properties_panel_btn_save = Сохранить
 properties_panel_btn_start = Стартовая
 properties_panel_btn_delete = Удалить
+
+#Levels Panel
+levels_panel_title = Уровни
+
+level_show_all = Показать все
+level_hide_all = Скрыть все
 
 level_0 = Уровень 0
 level_1 = Уровень 1
