--- a/IDE/v.02/modules/Scripts/locale/ru_RU/Scripts_General.properties
+++ b/IDE/v.02/modules/Scripts/locale/ru_RU/Scripts_General.properties
@@ -1,3 +1,22 @@
 #Title
 title = Scripts
 toolset_button_label = Скрипты
+
+# Pages Panel
+pages_panel_title = Страницы
+
+# Containers Panel
+containers_panel_title = Контейнеры
+
+# ServerScripts Panel
+server_scripts_panel_title = Серверные скрипты
+server_scripts_panel_add = Добавить скрипт
+server_scripts_panel_delete = Удалить скрипт
+
+# Libraries Panel
+libraries_panel_title = Библиотеки
+libraries_panel_add = Добавить библиотеку
+libraries_panel_delete = Удалить библиотеку
+
+#Other
+applications_scripts = Скрипты приложения
