--- a/IDE/v.02/modules/Scripts/locale/fr_FR/Scripts_General.properties
+++ b/IDE/v.02/modules/Scripts/locale/fr_FR/Scripts_General.properties
@@ -1,3 +1,22 @@
 # Title
 title = Scripts
 toolset_button_label = Scripts
+
+# Pages Panel
+pages_panel_title = Pages
+
+# Containers Panel
+containers_panel_title = Containers
+
+# ServerScripts Panel
+server_scripts_panel_title = Server Scripts
+server_scripts_panel_add = Add Script
+server_scripts_panel_delete = Delete Script
+
+# Libraries Panel
+libraries_panel_title = Libraries
+libraries_panel_add = Add Library
+libraries_panel_delete = Delete Library
+
+#Other
+applications_scripts = Application Scripts
