--- a/IDE/v.02/modules/Scripts/locale/fr_FR/Scripts_General.properties
+++ b/IDE/v.02/modules/Scripts/locale/fr_FR/Scripts_General.properties
@@ -1,6 +1,8 @@
 # Title
 title = Scripts
 toolset_button_label = Scripts
+ok = OK
+cancel = Cancel
 
 # Pages Panel
 pages_panel_title = Pages
@@ -17,6 +19,12 @@ server_scripts_panel_delete = Delete Script
 libraries_panel_title = Libraries
 libraries_panel_add = Add Library
 libraries_panel_delete = Delete Library
+
+# Create Action Window
+create_action_window_action_title = Add New Action 
+create_action_window_library_title = Add New Library
+create_action_window_description = Input Script Name:
+create_action_window_name_error_description = Please Input Correct Name
 
 #Other
 applications_scripts = Application Scripts
