--- a/IDE/v.02/modules/Scripts/locale/ru_RU/Scripts_General.properties
+++ b/IDE/v.02/modules/Scripts/locale/ru_RU/Scripts_General.properties
@@ -1,6 +1,8 @@
 #Title
 title = Scripts
 toolset_button_label = Скрипты
+ok = OK
+cancel = Отмена
 
 # Pages Panel
 pages_panel_title = Страницы
@@ -17,6 +19,12 @@ server_scripts_panel_delete = Удалить скрипт
 libraries_panel_title = Библиотеки
 libraries_panel_add = Добавить библиотеку
 libraries_panel_delete = Удалить библиотеку
+
+# Create Action Window
+create_action_window_action_title = Добавить новый скрипт
+create_action_window_library_title = Добавить новую библиотеку
+create_action_window_description = Введите имя скрипта:
+create_action_window_name_error_description = Введите корректное имя скрипта
 
 #Other
 applications_scripts = Скрипты приложения
