git-svn-id: http://svn.vdombox.ru/flextools/trunk@5854 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Scripts/locale/en_US/Scripts_General.properties
+++ b/IDE/v.02/modules/Scripts/locale/en_US/Scripts_General.properties
@@ -12,13 +12,13 @@ containers_panel_title = Containers
 
 # ServerScripts Panel
 server_scripts_panel_title = Server Scripts
-server_scripts_panel_add = Add Script
-server_scripts_panel_delete = Delete Script
+server_scripts_panel_add = Add
+server_scripts_panel_delete = Delete
 
 # Libraries Panel
 libraries_panel_title = Libraries
-libraries_panel_add = Add Library
-libraries_panel_delete = Delete Library
+libraries_panel_add = Add
+libraries_panel_delete = Delete
 
 # Create Action Window
 create_action_window_action_title = Add New Action
