--- a/IDE/v.02/modules/Scripts/locale/ru_RU/Scripts_General.properties
+++ b/IDE/v.02/modules/Scripts/locale/ru_RU/Scripts_General.properties
@@ -12,13 +12,13 @@ containers_panel_title = Контейнеры
 
 # ServerScripts Panel
 server_scripts_panel_title = Серверные скрипты
-server_scripts_panel_add = Добавить скрипт
-server_scripts_panel_delete = Удалить скрипт
+server_scripts_panel_add = Добавить
+server_scripts_panel_delete = Удалить
 
 # Libraries Panel
 libraries_panel_title = Библиотеки
-libraries_panel_add = Добавить библиотеку
-libraries_panel_delete = Удалить библиотеку
+libraries_panel_add = Добавить
+libraries_panel_delete = Удалить
 
 # Create Action Window
 create_action_window_action_title = Добавить новый скрипт
