git-svn-id: http://svn.vdombox.ru/flextools/trunk@5897 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/locale/ru_RU/Wysiwyg_General.properties
+++ b/IDE/v.02/modules/Wysiwyg/locale/ru_RU/Wysiwyg_General.properties
@@ -1,3 +1,11 @@
 # Title
 title = WYSIWYG
 toolset_button_label = WYSIWYG
+
+object_attributes_panel_title = Свойства объекта
+object_attributes_panel_save = Сохранить
+object_attributes_panel_delete = Удалить
+
+help_panel_title = Справка
+
+pages_panel_title = Страницы
