--- a/IDE/v.02/modules/Wysiwyg/locale/en_US/Wysiwyg_General.properties
+++ b/IDE/v.02/modules/Wysiwyg/locale/en_US/Wysiwyg_General.properties
@@ -1,3 +1,11 @@
 # Title
 title = WYSIWYG
 toolset_button_label = WYSIWYG
+
+object_attributes_panel_title = Object Properties
+object_attributes_panel_save = Save
+object_attributes_panel_delete = Delete
+
+help_panel_title = Help
+
+pages_panel_title = Pages
