git-svn-id: http://svn.vdombox.ru/flextools/trunk@5987 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/core/locale/ru_RU/LoginForm.properties
+++ b/IDE/v.02/core/locale/ru_RU/LoginForm.properties
@@ -2,5 +2,5 @@ title = Введите логин и пароль
 username = Логин
 password = Пароль
 language = Язык
-ok_button = Вход
-quit_button = Выход
+ok_button = Отправить
+quit_button = Выйти
