git-svn-id: http://svn.vdombox.ru/flextools/trunk@5990 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/ResourceBrowser/locale/en_US/ResourceBrowser_General.properties
+++ b/IDE/v.02/modules/ResourceBrowser/locale/en_US/ResourceBrowser_General.properties
@@ -1,3 +1,10 @@
 # Title
 title = ResourceBrowser
 toolset_button_label = ResourceBrowser
+
+# WorkAreaSkin
+
+work_area_delete_resource = Delete Resource
+work_area_show_info = Show Info
+work_area_hide_info = Hide Info
+work_area_add_resources = Add Resources
