--- a/IDE/v.02/modules/ResourceBrowser/locale/ru_RU/ResourceBrowser_General.properties
+++ b/IDE/v.02/modules/ResourceBrowser/locale/ru_RU/ResourceBrowser_General.properties
@@ -1,3 +1,10 @@
 # Title
 title = Проводник ресурсов
 toolset_button_label = Проводник ресурсов
+
+# WorkAreaSkin
+
+work_area_delete_resource = Удалить ресурс
+work_area_show_info = Показать сводку
+work_area_hide_info = Скрыть сводку
+work_area_add_resources = Добавить ресурсы
