git-svn-id: http://svn.vdombox.ru/flextools/trunk@5992 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Tree/locale/en_US/Tree_General.properties
+++ b/IDE/v.02/modules/Tree/locale/en_US/Tree_General.properties
@@ -2,6 +2,17 @@
 title = Tree
 toolset_button_label = Tree
 
+# WorkAreaSkin
+
+work_area_save = Save
+work_area_undo = Undo
+work_area_new_page = New Page
+work_area_auto_spacing = Autospacing
+work_area_expand_all = Expand All
+work_area_collapse_all = Collapse All
+work_area_show_signature = Show Signature
+work_area_hide_signature = Hide Signature
+
 #Menu Panel
 menu_panel_title = Menu
 
@@ -29,3 +40,10 @@ level_4 = Level 4
 level_5 = Level 5
 level_6 = Level 6
 level_7 = Level 7
+
+# TreeElementSkin
+
+tree_element_hide = Hide
+tree_element_show = Show
+tree_element_create_linkage = Create Linkage
+tree_element_delete = Delete
