--- a/IDE/v.02/modules/Tree/locale/ru_RU/Tree_General.properties
+++ b/IDE/v.02/modules/Tree/locale/ru_RU/Tree_General.properties
@@ -2,6 +2,17 @@
 title = Дерево
 toolset_button_label = Дерево
 
+# WorkAreaSkin
+
+work_area_save = Сохранить
+work_area_undo = Отмена
+work_area_new_page = Новая страница
+work_area_auto_spacing = Выравнивание
+work_area_expand_all = Раскрыть всё
+work_area_collapse_all = Свернуть всё
+work_area_show_signature = Показать подписи
+work_area_hide_signature = Скрыть подписи
+
 #Menu Panel
 menu_panel_title = Меню
 
@@ -29,3 +40,10 @@ level_4 = Уровень 4
 level_5 = Уровень 5
 level_6 = Уровень 6
 level_7 = Уровень 7
+
+# TreeElementSkin
+
+tree_element_hide = Скрыть
+tree_element_show = Раскрыть
+tree_element_create_linkage = Соединение
+tree_element_delete = Удалить
