git-svn-id: http://svn.vdombox.ru/flextools/trunk@5998 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/core/locale/en_US/Core_General.properties
+++ b/IDE/v.02/core/locale/en_US/Core_General.properties
@@ -1,4 +1,6 @@
-# Categories
+login_button_label = Logout
+
+#Module categories
 applicationManagment = applicationManagment
 editor = editor
 language = language
