--- a/IDE/v.02/core/locale/ru_RU/Core_General.properties
+++ b/IDE/v.02/core/locale/ru_RU/Core_General.properties
@@ -1,4 +1,6 @@
-# Categories
+login_button_label = Выход
+
+#Module categories
 applicationManagment = приложения
 editing = редактирование
 language = язык
