git-svn-id: http://svn.vdombox.ru/flextools/trunk@6206 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/locale/en_US/Wysiwyg_General.properties
+++ b/IDE/v.02/modules/Wysiwyg/locale/en_US/Wysiwyg_General.properties
@@ -2,6 +2,9 @@
 title = WYSIWYG
 toolset_button_label = WYSIWYG
 
+work_area_wysiwyg_button_label = WYSIWYG
+work_area_xml_button_label = VDOM XML
+
 object_attributes_panel_title = Object Properties
 object_attributes_panel_save = Save
 object_attributes_panel_delete = Delete
