--- a/IDE/v.02/modules/Wysiwyg/locale/ru_RU/Wysiwyg_General.properties
+++ b/IDE/v.02/modules/Wysiwyg/locale/ru_RU/Wysiwyg_General.properties
@@ -2,6 +2,8 @@
 title = WYSIWYG
 toolset_button_label = WYSIWYG
 
+work_area_xml_save_button_label = Сохранить
+
 object_attributes_panel_title = Свойства объекта
 object_attributes_panel_save = Сохранить
 object_attributes_panel_delete = Удалить
