--- a/IDE/v.02/modules/Wysiwyg/locale/fr_FR/Wysiwyg_General.properties
+++ b/IDE/v.02/modules/Wysiwyg/locale/fr_FR/Wysiwyg_General.properties
@@ -2,10 +2,76 @@
 title = WYSIWYG
 toolset_button_label = WYSIWYG
 
-object_attributes_panel_title = Object Properties
-object_attributes_panel_save = Save
-object_attributes_panel_delete = Delete
+# ------------------------------------------------------------------------------------------------------------------------------------------------------------------#
+# Work Area
+# ------------------------------------------------------------------------------------------------------------------------------------------------------------------#
 
-help_panel_title = Help
+	work_area_xml_save_button_label = Save
 
-pages_panel_title = Pages
+	work_area_wysiwyg_button_label = WYSIWYG
+	work_area_xml_button_label = VDOM XML
+
+
+# ------------------------------------------------------------------------------------------------------------------------------------------------------------------#
+# Panels
+# ------------------------------------------------------------------------------------------------------------------------------------------------------------------#
+
+	# ObjectAttributesPanel
+
+		object_attributes_panel_title = Object Properties
+		object_attributes_panel_save = Save
+		object_attributes_panel_delete = Delete
+
+	# HelpPanel
+
+		help_panel_title = Help
+
+	#ObjectTreePanel
+
+		pages_panel_title = Pages
+
+
+
+# ------------------------------------------------------------------------------------------------------------------------------------------------------------------#
+#         Windows
+# ------------------------------------------------------------------------------------------------------------------------------------------------------------------#
+
+
+	# MultilineWindow
+
+		multiline_window_title = Multiline window
+		multiline_window_add_resource = Resources
+		multiline_window_save = Save
+
+	# ColorPickerWindow
+
+		color_picker_window_use = Use
+
+	# ResourceSelectorWindow
+
+		resource_selector_window_title = Resource browser
+		resource_selector_window_filter = Filter resource
+		resource_selector_window_total = Total Resources:
+		resource_selector_window_upload = Upload File...
+		resource_selector_window_insert = Insert
+		
+		
+# ------------------------------------------------------------------------------------------------------------------------------------------------------------------#
+#         Toolbars
+# ------------------------------------------------------------------------------------------------------------------------------------------------------------------#
+	
+	
+	#RichTextToolbar
+	
+		richtext_toolbar_style = Style
+		richtext_toolbar_font = Font
+		richtext_toolbar_size = Size
+		richtext_toolbar_text_color = Text Color
+		richtext_toolbar_fill_color = Fill Color
+		richtext_toolbar_source = Source
+				
+	#TextToolBar
+	
+		text_toolbar_font = Font
+		text_toolbar_size = Size
+		text_toolbar_text_color = Text Color
