--- a/IDE/v.02/modules/Wysiwyg/locale/ru_RU/Wysiwyg_General.properties
+++ b/IDE/v.02/modules/Wysiwyg/locale/ru_RU/Wysiwyg_General.properties
@@ -2,12 +2,76 @@
 title = WYSIWYG
 toolset_button_label = WYSIWYG
 
-work_area_xml_save_button_label = Сохранить
+# ------------------------------------------------------------------------------------------------------------------------------------------------------------------#
+# Work Area
+# ------------------------------------------------------------------------------------------------------------------------------------------------------------------#
 
-object_attributes_panel_title = Свойства объекта
-object_attributes_panel_save = Сохранить
-object_attributes_panel_delete = Удалить
+	work_area_xml_save_button_label = Save
 
-help_panel_title = Справка
+	work_area_wysiwyg_button_label = WYSIWYG
+	work_area_xml_button_label = VDOM XML
 
-pages_panel_title = Страницы
+
+# ------------------------------------------------------------------------------------------------------------------------------------------------------------------#
+#               Panels
+# ------------------------------------------------------------------------------------------------------------------------------------------------------------------#
+
+
+	# ObjectAttributesPanel
+
+		object_attributes_panel_title = Свойства объекта
+		object_attributes_panel_save = Сохранить
+		object_attributes_panel_delete = Удалить
+
+	# HelpPanel
+
+		help_panel_title = Справка
+
+	#ObjectTreePanel
+
+		pages_panel_title = Страницы
+
+
+# ------------------------------------------------------------------------------------------------------------------------------------------------------------------#
+#         Windows
+# ------------------------------------------------------------------------------------------------------------------------------------------------------------------#
+
+
+	# MultilineWindow
+
+		multiline_window_title = Multiline window
+		multiline_window_add_resource = Ресурсы
+		multiline_window_save = Сохранить
+
+	# ColorPickerWindow
+
+		color_picker_window_use = Использовать
+
+	# ResourceSelectorWindow
+
+		resource_selector_window_title = Обозреватель ресурсов
+		resource_selector_window_filter = Фильтр ресурсов
+		resource_selector_window_total = Всего ресурсов
+		resource_selector_window_upload = Загрузить файл...:
+		resource_selector_window_insert = Вставить
+			
+			
+# ------------------------------------------------------------------------------------------------------------------------------------------------------------------#
+#         Toolbars
+# ------------------------------------------------------------------------------------------------------------------------------------------------------------------#
+	
+	
+	#RichTextToolbar
+	
+		richtext_toolbar_style = Стиль
+		richtext_toolbar_font = Шрифт
+		richtext_toolbar_size = Размер
+		richtext_toolbar_text_color = Цвет текста
+		richtext_toolbar_fill_color = Цвет фона
+		richtext_toolbar_source = Источник
+				
+	#TextToolBar
+	
+		text_toolbar_font = Шрифт
+		text_toolbar_size = Размер
+		text_toolbar_text_color = Цвет Текста
