--- a/IDE/v.02/modules/ApplicationsManagment/locale/en_US/ApplicationsManagment_General.properties
+++ b/IDE/v.02/modules/ApplicationsManagment/locale/en_US/ApplicationsManagment_General.properties
@@ -1,36 +1,22 @@
-# Title
-title = applications managment
 
-# ApplicationInformation panel
-information_pages = Pages:
-information_objects = Objects:
 
-# ApplicationProperties component
-properties_title = Applcation properties
-properties_icon = Illustration
-properties_name = Name
-properties_name_prompt = Application Name
-properties_description = Description
-properties_description_prompt = Application Description
-properties_edit = Edit
 
-# CreateApplication component
-create_title = Create application
+# CreateApplicationView
 
-# EditApplication component
-edit_title = Edit application
+	create_application_name = Name:
+	create_application_icon = Icon:
+	create_application_description = Description:
+	create_application_language = Language:
+	create_application_save = Save
+	create_application_cancel = Cancel
+	
+# IconChooser
 
-# SearchResult component
-expand_label = Expand All
-collapse_label = Collapse All
-goto_label = Go to Editor
-name_label = Application Name:
+	iconchooser_select_icon = Select Icon:
+	iconchooser_load_from_computer = Load from computer:
+	
+# SettingScreen
 
-# ApplicationEditor component
-icon_title = Illustration
-name_title = Name
-name_prompt = Application Name
-description_title = Description
-description_prompt = Application Description
-submit_label = Ok
-cancel_label = Cancel
+	settingscreen_title = Settings application managment
+	settingscreen_save = Save Last Application
+	
