--- a/IDE/v.02/modules/ApplicationsManagment/locale/ru_RU/ApplicationsManagment_General.properties
+++ b/IDE/v.02/modules/ApplicationsManagment/locale/ru_RU/ApplicationsManagment_General.properties
@@ -1,39 +1,21 @@
-#Title
-title = менеджер приложений
 
-# Search panel
-search_find = Найти
 
-# ApplicationInformation panel
-information_pages = Страницы:
-information_objects = Объекты:
 
-# ApplicationProperties component
-properties_title = Свойства приложения
-properties_icon = Иконка
-properties_name = Имя
-properties_name_prompt = Имя приложения
-properties_description = Описание
-properties_description_prompt = Описание приложения
-properties_edit = Редактирование
+# CreateApplicationView
 
-# CreateApplication component
-create_title = Создать приложение
+	create_application_name = Имя:
+	create_application_icon = Иконка:
+	create_application_description = Описание:
+	create_application_language = Язык:
+	create_application_save = Сохранить
+	create_application_cancel = Отмена
+		
+# IconChooser
 
-# EditApplication component
-edit_title = Редактирование приложения
+	iconchooser_select_icon = Выбрать иконку:
+	iconchooser_load_from_computer = Загрузить с диска:
+		
+# SettingScreen
 
-# SearchResult component
-expand_label = Раскрыть всё
-collapse_label = Свернуть всё
-goto_label = К Редактору
-name_label = Имя приложения:
-
-# ApplicationEditor component
-icon_title = Иконка
-name_title = Имя
-name_prompt = Имя приложения
-description_title = Описание
-description_prompt = Описание приложения
-submit_label = Ok
-cancel_label = Отмена
+	settingscreen_title = Settings application managment
+	settingscreen_save = Сохранить последнее приложение
