--- a/IDE/v.02/core/locale/ru_RU/Core_General.properties
+++ b/IDE/v.02/core/locale/ru_RU/Core_General.properties
@@ -5,3 +5,8 @@ applicationManagment = приложения
 editing = редактирование
 language = язык
 some = другое
+
+# SettingsWindow
+
+	settingswindow_ok = OK
+	settingswindow_cancel = Отмена
