--- a/IDE/v.02/core/locale/fr_FR/Core_General.properties
+++ b/IDE/v.02/core/locale/fr_FR/Core_General.properties
@@ -5,3 +5,8 @@ applicationManagment = applicationManagment
 editor = editor
 language = language
 some = some
+
+# SettingsWindow
+
+	settingswindow_ok = OK
+	settingswindow_cancel = Cancel
