1. Fix bug with set background image in PageRenderer 2. New design WorkArea
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7004 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/locale/fr_FR/Wysiwyg_General.properties
+++ b/IDE/v.02/modules/Wysiwyg/locale/fr_FR/Wysiwyg_General.properties
@@ -10,6 +10,9 @@ toolset_button_label = WYSIWYG
 
 	work_area_wysiwyg_button_label = WYSIWYG
 	work_area_xml_button_label = VDOM XML
+		
+	work_area_show_rules = Show rules   
+	work_area_show_guides = Show guides
 
 
 # ------------------------------------------------------------------------------------------------------------------------------------------------------------------#
