--- a/IDE/v.02/modules/Wysiwyg/locale/ru_RU/Wysiwyg_General.properties
+++ b/IDE/v.02/modules/Wysiwyg/locale/ru_RU/Wysiwyg_General.properties
@@ -10,6 +10,9 @@ toolset_button_label = WYSIWYG
 
 	work_area_wysiwyg_button_label = WYSIWYG
 	work_area_xml_button_label = VDOM XML
+		
+	work_area_show_rules = Show rules   
+	work_area_show_guides = Show guides
 
 
 # ------------------------------------------------------------------------------------------------------------------------------------------------------------------#
