--- a/IDE/v.02/modules/Wysiwyg/locale/en_US/Wysiwyg_General.properties
+++ b/IDE/v.02/modules/Wysiwyg/locale/en_US/Wysiwyg_General.properties
@@ -13,6 +13,7 @@ toolset_button_label = WYSIWYG
 	
 	work_area_show_rules = Show rules   
 	work_area_show_guides = Show guides
+	work_area_show_as = Show editor as:
 
 # ------------------------------------------------------------------------------------------------------------------------------------------------------------------#
 # Panels
