show spinner popup when creating resources list
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7028 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/locale/fr_FR/Wysiwyg_General.properties
+++ b/IDE/v.02/modules/Wysiwyg/locale/fr_FR/Wysiwyg_General.properties
@@ -59,6 +59,10 @@ toolset_button_label = WYSIWYG
 		resource_selector_window_upload = Upload File...
 		resource_selector_window_insert = Insert
 		
+	# SpinnerPopup
+		spinner_create_resources = Creating resources list ...
+		spinner_new_resource = Creating new resource ...
+		
 		
 # ------------------------------------------------------------------------------------------------------------------------------------------------------------------#
 #         Toolbars
