--- a/IDE/v.02/modules/Wysiwyg/locale/ru_RU/Wysiwyg_General.properties
+++ b/IDE/v.02/modules/Wysiwyg/locale/ru_RU/Wysiwyg_General.properties
@@ -59,6 +59,9 @@ toolset_button_label = WYSIWYG
 		resource_selector_window_upload = Загрузить файл...:
 		resource_selector_window_insert = Вставить
 			
+	# SpinnerPopup
+		spinner_create_resources = Создание списка ресурсов ...
+		spinner_new_resource = Добавление нового ресурса ...
 			
 # ------------------------------------------------------------------------------------------------------------------------------------------------------------------#
 #         Toolbars
