set index page and change functionality on creating and deleting page; show page name instead of title
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7085 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Tree/locale/en_US/Tree_General.properties
+++ b/IDE/v.02/modules/Tree/locale/en_US/Tree_General.properties
@@ -19,6 +19,7 @@ menu_panel_title = Menu
 #Properties Panel
 properties_panel_title = Properties
 properties_panel_page_title = Title
+properties_panel_page_name = Name
 properties_panel_page_description = Description
 properties_panel_page_image = Image
 
