--- a/IDE/v.02/modules/Tree/locale/ru_RU/Tree_General.properties
+++ b/IDE/v.02/modules/Tree/locale/ru_RU/Tree_General.properties
@@ -19,6 +19,7 @@ menu_panel_title = Меню
 #Properties Panel
 properties_panel_title = Свойства
 properties_panel_page_title = Заголовок
+properties_panel_page_name = Имя
 properties_panel_page_description = Описание
 properties_panel_page_image = Картинка
 
