--- a/IDE/v.02/modules/Tree/locale/fr_FR/Tree_General.properties
+++ b/IDE/v.02/modules/Tree/locale/fr_FR/Tree_General.properties
@@ -17,6 +17,7 @@ menu_panel_title = Menu
 
 properties_panel_title = Properties
 properties_panel_page_title = Title
+properties_panel_page_name = Name
 properties_panel_page_description = Description
 properties_panel_page_image = Image
 
