Fix Script editor. step 3
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7147 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Scripts/locale/fr_FR/Scripts_General.properties
+++ b/IDE/v.02/modules/Scripts/locale/fr_FR/Scripts_General.properties
@@ -17,6 +17,9 @@ libraries_panel_title = Libraries
 libraries_panel_add = Add
 libraries_panel_delete = Delete
 
+# GlobalScripts Panel
+global_scripts_panel_title = Global Scripts
+
 # Create Action Window
 create_action_window_action_title = Add New Action 
 create_action_window_library_title = Add New Library
