Add ApplicationManagerWindow. Step 1
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7156 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/core/locale/en_US/Core_General.properties
+++ b/IDE/v.02/core/locale/en_US/Core_General.properties
@@ -10,3 +10,7 @@ some = some
 
 	settingswindow_ok = OK
 	settingswindow_cancel = Cancel
+	
+# ApplicationManagerWindow
+
+	application_manager_window_title = APP MANAGER
