--- a/IDE/v.02/core/locale/ru_RU/Core_General.properties
+++ b/IDE/v.02/core/locale/ru_RU/Core_General.properties
@@ -10,3 +10,7 @@ some = другое
 
 	settingswindow_ok = OK
 	settingswindow_cancel = Отмена
+	
+# ApplicationManagerWindow
+
+	application_manager_window_title = APP MANAGER
