--- a/IDE/v.02/core/locale/fr_FR/Core_General.properties
+++ b/IDE/v.02/core/locale/fr_FR/Core_General.properties
@@ -10,3 +10,7 @@ some = some
 
 	settingswindow_ok = OK
 	settingswindow_cancel = Cancel
+	
+# ApplicationManagerWindow
+
+	application_manager_window_title = APP MANAGER
