Add ApplicationManagerWindow. Step 2. add select application, settings
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7161 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/core/locale/ru_RU/Core_General.properties
+++ b/IDE/v.02/core/locale/ru_RU/Core_General.properties
@@ -14,3 +14,5 @@ some = другое
 # ApplicationManagerWindow
 
 	application_manager_window_title = APP MANAGER
+	
+	change_application_open_in_editor = Open in Editor
