Add ApplicationManagerWindow. Step 4. add iconChooser
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7162 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/core/locale/ru_RU/Core_General.properties
+++ b/IDE/v.02/core/locale/ru_RU/Core_General.properties
@@ -16,3 +16,8 @@ some = другое
 	application_manager_window_title = APP MANAGER
 	
 	change_application_open_in_editor = Open in Editor
+	
+	create_edit_application_name = Name
+	create_edit_application_description = Description
+	create_edit_application_save = Save
+	create_edit_application_cancel = Cancel
