--- a/IDE/v.02/core/locale/ru_RU/Core_General.properties
+++ b/IDE/v.02/core/locale/ru_RU/Core_General.properties
@@ -15,6 +15,7 @@ some = другое
 
 	application_manager_window_title = APP MANAGER
 	
+	change_application_add_new_application = Add new application
 	change_application_open_in_editor = Open in Editor
 	
 	create_edit_application_name = Name
