Add ApplicationManagerWindow. Step 6. last modification
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7178 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/core/locale/ru_RU/Core_General.properties
+++ b/IDE/v.02/core/locale/ru_RU/Core_General.properties
@@ -22,3 +22,6 @@ some = другое
 	create_edit_application_description = Description
 	create_edit_application_save = Save
 	create_edit_application_cancel = Cancel
+		
+	iconchooser_select_icon = Select icon
+	iconchooser_load_from_computer = Load from computer
