add toolTip for btns in toolbar -> add locale texts
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7197 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/locale/en_US/Wysiwyg_General.properties
+++ b/IDE/v.02/modules/Wysiwyg/locale/en_US/Wysiwyg_General.properties
@@ -71,6 +71,25 @@ toolset_button_label = WYSIWYG
 		richtext_toolbar_fill_color = Fill Color
 		richtext_toolbar_source = Source
 		
+		richtext_toolbar_select_all = Select All
+		richtext_toolbar_remove_format = Remove format
+		richtext_toolbar_insert_link = Insert Link
+		richtext_toolbar_unlink = Unlink
+		richtext_toolbar_insert_horizontal_rule = Insert horizontal rule
+		richtext_toolbar_insert_char = Insert char
+		richtext_toolbar_bold = Bold
+		richtext_toolbar_italic = Italic
+		richtext_toolbar_underline = Underline
+		richtext_toolbar_strikethrough = Strike through
+		richtext_toolbar_justify_left = Justify left
+		richtext_toolbar_justify_right = Justify right
+		richtext_toolbar_justify_center = Justify center
+		richtext_toolbar_justify_full = Justify full
+		richtext_toolbar_insert_ordered_list = Insert ordered list
+		richtext_toolbar_insert_unordered_list = Insert unordered list
+		richtext_toolbar_outdent = Outdent
+		richtext_toolbar_indent = Indent
+		
 	#TextToolBar
 	
 		text_toolbar_font = Font
