--- a/IDE/v.02/modules/Wysiwyg/locale/ru_RU/Wysiwyg_General.properties
+++ b/IDE/v.02/modules/Wysiwyg/locale/ru_RU/Wysiwyg_General.properties
@@ -72,6 +72,25 @@ toolset_button_label = WYSIWYG
 		richtext_toolbar_text_color = Цвет текста
 		richtext_toolbar_fill_color = Цвет фона
 		richtext_toolbar_source = Источник
+		
+		richtext_toolbar_select_all = Выделить все
+		richtext_toolbar_remove_format = Очистить формат
+		richtext_toolbar_insert_link = Insert Link
+		richtext_toolbar_unlink = Unlink
+		richtext_toolbar_insert_horizontal_rule = Insert horizontal rule
+		richtext_toolbar_insert_char = Insert char
+		richtext_toolbar_bold = Bold
+		richtext_toolbar_italic = Italic
+		richtext_toolbar_underline = Underline
+		richtext_toolbar_strikethrough = Strike through
+		richtext_toolbar_justify_left = Justify left
+		richtext_toolbar_justify_right = Justify right
+		richtext_toolbar_justify_center = Justify center
+		richtext_toolbar_justify_full = Justify full
+		richtext_toolbar_insert_ordered_list = Insert ordered list
+		richtext_toolbar_insert_unordered_list = Insert unordered list
+		richtext_toolbar_outdent = Outdent
+		richtext_toolbar_indent = Indent
 				
 	#TextToolBar
 	
