App manadger refactor
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7216 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/core/locale/ru_RU/Core_General.properties
+++ b/IDE/v.02/core/locale/ru_RU/Core_General.properties
@@ -15,13 +15,13 @@ some = другое
 
 	application_manager_window_title = APP MANAGER
 	
-	change_application_add_new_application = Add new application
-	change_application_open_in_editor = Open in Editor
+	change_application_add_new_application = Добавить
+	change_application_open_in_editor = Открыть
 	
-	create_edit_application_name = Name
-	create_edit_application_description = Description
-	create_edit_application_save = Save
-	create_edit_application_cancel = Cancel
+	create_edit_application_name = Имя
+	create_edit_application_description = Описание
+	create_edit_application_save = Ок
+	create_edit_application_cancel = Отмена
 		
-	iconchooser_select_icon = Select icon
-	iconchooser_load_from_computer = Load from computer
+	iconchooser_select_icon = Выбрать стандартное
+	iconchooser_load_from_computer = Загрузить с копьютера
