Edit LoginView step3 Add Skin
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7217 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/core/locale/en_US/LoginForm.properties
+++ b/IDE/v.02/core/locale/en_US/LoginForm.properties
@@ -4,5 +4,6 @@ password = Password
 hostname = Server IP
 language = Language
 ok_button = Connect
-quit_button = Exit
+quit_button = Cancel
 back_button = Back
+save_button = Save
