--- a/IDE/v.02/modules/ResourceBrowser/locale/ru_RU/ResourceBrowser_General.properties
+++ b/IDE/v.02/modules/ResourceBrowser/locale/ru_RU/ResourceBrowser_General.properties
@@ -1,6 +1,6 @@
 # Title
-title = Проводник ресурсов
-toolset_button_label = Проводник ресурсов
+title = Ресурсы
+toolset_button_label = Ресурсы
 
 # WorkAreaSkin
 
