--- a/IDE/v.02/core/locale/en_US/Core_General.properties
+++ b/IDE/v.02/core/locale/en_US/Core_General.properties
@@ -16,12 +16,15 @@ some = some
 	application_manager_window_title = APP MANAGER
 	
 	change_application_add_new_application = Add new application
-	change_application_open_in_editor = Open in Editor
+	change_application_open_in_editor = Open
+	change_application_edit = Edit
 	
 	create_edit_application_name = Name
 	create_edit_application_description = Description
-	create_edit_application_save = Save
+	create_edit_application_save = Ок
 	create_edit_application_cancel = Cancel
+	create_edit_application_script_language = Script Language
 	
-	iconchooser_select_icon = Select icon
+	iconchooser_select_icon = Select icon		
 	iconchooser_load_from_computer = Load from computer
+	iconchooser_icon = Icon
