--- a/IDE/v.02/core/locale/ru_RU/Core_General.properties
+++ b/IDE/v.02/core/locale/ru_RU/Core_General.properties
@@ -13,15 +13,18 @@ some = другое
 	
 # ApplicationManagerWindow
 
-	application_manager_window_title = APP MANAGER
+	application_manager_window_title = Выбор приложения
 	
 	change_application_add_new_application = Добавить
 	change_application_open_in_editor = Открыть
+	change_application_edit = Изменить
 	
 	create_edit_application_name = Имя
 	create_edit_application_description = Описание
 	create_edit_application_save = Ок
 	create_edit_application_cancel = Отмена
+	create_edit_application_script_language  = Язык скрипта
 		
-	iconchooser_select_icon = Выбрать стандартное
-	iconchooser_load_from_computer = Загрузить с копьютера
+	iconchooser_select_icon = Стандартное
+	iconchooser_load_from_computer = Выбрать с копьютера
+	iconchooser_icon = Иконка
