git-svn-id: http://svn.vdombox.ru/flextools/trunk@7273 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/core/locale/en_US/LoginForm.properties
+++ b/IDE/v.02/core/locale/en_US/LoginForm.properties
@@ -4,6 +4,6 @@ password = Password
 hostname = Server IP
 language = Language
 ok_button = Connect
-quit_button = Cancel
+quit_button = Exit
 back_button = Back
 save_button = Save
