--- a/IDE/v.02/modules/Tree/locale/fr_FR/Tree_General.properties
+++ b/IDE/v.02/modules/Tree/locale/fr_FR/Tree_General.properties
@@ -22,7 +22,7 @@ properties_panel_page_description = Description
 properties_panel_page_image = Image
 
 properties_panel_btn_save = Save
-properties_panel_btn_start = Start
+properties_panel_btn_start = Home
 properties_panel_btn_delete = Delete
 
 levels_panel_title = Levels
