display on some locale. Add ContextMenu
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7305 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/locale/fr_FR/Wysiwyg_General.properties
+++ b/IDE/v.02/modules/Wysiwyg/locale/fr_FR/Wysiwyg_General.properties
@@ -98,3 +98,12 @@ toolset_button_label = WYSIWYG
 		text_toolbar_font = Font
 		text_toolbar_size = Size
 		text_toolbar_text_color = Text Color
+				
+	#Renderer
+	
+		renderer_toolTip = Name: 
+		delete_Renderer = Are you sure want to delete 
+		
+	#ContextMenu
+	
+		contextMenu_delete = Delete
