--- a/IDE/v.02/modules/Wysiwyg/locale/ru_RU/Wysiwyg_General.properties
+++ b/IDE/v.02/modules/Wysiwyg/locale/ru_RU/Wysiwyg_General.properties
@@ -97,3 +97,13 @@ toolset_button_label = WYSIWYG
 		text_toolbar_font = Шрифт
 		text_toolbar_size = Размер
 		text_toolbar_text_color = Цвет Текста
+		
+				
+	#Renderer
+	
+		renderer_toolTip = Имя: 
+		delete_Renderer = Вы уверены что хотите удалить 
+		
+	#ContextMenu
+	
+		contextMenu_delete = Удалить
