display on some locale.
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7307 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Events/locale/ru_RU/Events_General.properties
+++ b/IDE/v.02/modules/Events/locale/ru_RU/Events_General.properties
@@ -28,3 +28,5 @@ event_element_hide = Скрыть
 event_element_show = Раскрыть
 event_element_create_linkage = Соединение
 event_element_delete = Удалить
+
+delete_Renderer = Вы уверены что хотите удалить
