--- a/IDE/v.02/modules/Events/locale/en_US/Events_General.properties
+++ b/IDE/v.02/modules/Events/locale/en_US/Events_General.properties
@@ -28,3 +28,5 @@ event_element_hide = Hide
 event_element_show = Show
 event_element_create_linkage = Create Linkage
 event_element_delete = Delete
+
+delete_Renderer = Are you sure want to delete 
