disable move on horizontal from mouse wheel
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7314 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Tree/locale/ru_RU/Tree_General.properties
+++ b/IDE/v.02/modules/Tree/locale/ru_RU/Tree_General.properties
@@ -6,10 +6,10 @@ toolset_button_label = Дерево
 
 work_area_save = Сохранить
 work_area_undo = Отмена
-work_area_new_page = Новая страница
-work_area_auto_spacing = Выравнивание
-work_area_expand_all = Раскрыть всё
-work_area_collapse_all = Свернуть всё
+work_area_new_page = Новая
+work_area_auto_spacing = Выравнить
+work_area_expand_all = Раскрыть
+work_area_collapse_all = Свернуть
 work_area_show_signature = Показать подписи
 work_area_hide_signature = Скрыть подписи
 
