--- a/IDE/v.02/modules/Wysiwyg/locale/ru_RU/Wysiwyg_General.properties
+++ b/IDE/v.02/modules/Wysiwyg/locale/ru_RU/Wysiwyg_General.properties
@@ -10,6 +10,8 @@ toolset_button_label = WYSIWYG
 
 	work_area_wysiwyg_button_label = WYSIWYG
 	work_area_xml_button_label = VDOM XML
+	
+	work_area_show_linking = Показывать привязки
 
 
 # ------------------------------------------------------------------------------------------------------------------------------------------------------------------#
