--- a/IDE/v.02/modules/Events/locale/ru_RU/Events_General.properties
+++ b/IDE/v.02/modules/Events/locale/ru_RU/Events_General.properties
@@ -6,6 +6,7 @@ toolset_button_label = События
 
 work_area_save = Сохранить
 work_area_undo = Отменить
+work_area_show_hidden = Показать скрытые
 
 # ObjectsTreePanel
 
