--- a/IDE/v.02/core/locale/en_US/Core_General.properties
+++ b/IDE/v.02/core/locale/en_US/Core_General.properties
@@ -28,3 +28,6 @@ some = some
 	iconchooser_select_icon = Select icon		
 	iconchooser_load_from_computer = Load from computer
 	iconchooser_icon = Icon
+	
+	iconchooser_cancel = Cancel
+	iconchooser_ok = Ок
