--- a/IDE/v.02/core/locale/ru_RU/Core_General.properties
+++ b/IDE/v.02/core/locale/ru_RU/Core_General.properties
@@ -28,3 +28,6 @@ some = другое
 	iconchooser_select_icon = Стандартное
 	iconchooser_load_from_computer = Выбрать с копьютера
 	iconchooser_icon = Иконка
+	
+	iconchooser_cancel = Отмена
+	iconchooser_ok = Ок
