--- a/IDE/v.02/modules/Events/locale/en_US/Events_General.properties
+++ b/IDE/v.02/modules/Events/locale/en_US/Events_General.properties
@@ -7,6 +7,7 @@ toolset_button_label = Events
 work_area_save = Save
 work_area_undo = Undo
 work_area_show_hidden = Show hidden
+work_area_show_current = Show as:
 
 # ObjectsTreePanel
 
