git-svn-id: http://svn.vdombox.ru/flextools/trunk@7422 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Events/locale/ru_RU/Events_General.properties
+++ b/IDE/v.02/modules/Events/locale/ru_RU/Events_General.properties
@@ -7,7 +7,7 @@ toolset_button_label = События
 work_area_save = Сохранить
 work_area_undo = Отменить
 work_area_show_hidden = Показать скрытые
-work_area_show_current = Показать как:
+work_area_show_current = Вид показа:
 
 # ObjectsTreePanel
 
