Add Copy step 1
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7451 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/locale/fr_FR/Wysiwyg_General.properties
+++ b/IDE/v.02/modules/Wysiwyg/locale/fr_FR/Wysiwyg_General.properties
@@ -109,3 +109,5 @@ toolset_button_label = WYSIWYG
 	#ContextMenu
 	
 		contextMenu_delete = Delete
+		contextMenu_copy = Copy
+		contextMenu_paste = Paste
