--- a/IDE/v.02/modules/Wysiwyg/locale/ru_RU/Wysiwyg_General.properties
+++ b/IDE/v.02/modules/Wysiwyg/locale/ru_RU/Wysiwyg_General.properties
@@ -109,3 +109,5 @@ toolset_button_label = WYSIWYG
 	#ContextMenu
 	
 		contextMenu_delete = Удалить
+		contextMenu_copy = Копировать
+		contextMenu_paste = Вставить
