--- a/IDE/v.02/modules/Wysiwyg/locale/en_US/Wysiwyg_General.properties
+++ b/IDE/v.02/modules/Wysiwyg/locale/en_US/Wysiwyg_General.properties
@@ -106,3 +106,5 @@ toolset_button_label = WYSIWYG
 	#ContextMenu
 	
 		contextMenu_delete = Delete
+		contextMenu_copy = Copy
+		contextMenu_paste = Paste
