--- a/IDE/v.02/modules/Tree/locale/en_US/Tree_General.properties
+++ b/IDE/v.02/modules/Tree/locale/en_US/Tree_General.properties
@@ -48,3 +48,5 @@ tree_element_hide = Hide
 tree_element_show = Show
 tree_element_create_linkage = Create Linkage
 tree_element_delete = Delete
+
+create_page_title = Select page type
