--- a/IDE/v.02/modules/Tree/locale/ru_RU/Tree_General.properties
+++ b/IDE/v.02/modules/Tree/locale/ru_RU/Tree_General.properties
@@ -48,3 +48,6 @@ tree_element_hide = Скрыть
 tree_element_show = Раскрыть
 tree_element_create_linkage = Соединение
 tree_element_delete = Удалить
+
+
+create_page_title = Выберите тип страницы
