Add save Resource
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7466 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/ResourceBrowser/locale/en_US/ResourceBrowser_General.properties
+++ b/IDE/v.02/modules/ResourceBrowser/locale/en_US/ResourceBrowser_General.properties
@@ -1,6 +1,6 @@
 # Title
-title = ResourceBrowser
-toolset_button_label = ResourceBrowser
+title = Resources
+toolset_button_label = Resources
 
 # WorkAreaSkin
 
@@ -8,3 +8,4 @@ work_area_delete_resource = Delete Resource
 work_area_show_info = Show Info
 work_area_hide_info = Hide Info
 work_area_add_resources = Add Resources
+work_area_get_resource = Get Resource
